--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,8 @@ body {
   font-family: 'Raleway', sans-serif;
   height: 100%;
   min-height: 100%;
+  -webkit-user-select: none
+  -webkit-touch-callout: none
 }
 a {
   color: #fff;
