--- a/css/style.css
+++ b/css/style.css
@@ -4,12 +4,12 @@ body {
   font-family: 'Raleway', sans-serif;
   height: 100%;
   min-height: 100%;
-  -webkit-user-select: none
-  -webkit-touch-callout: none
+  webkit-touch-callout: none !important; }
 }
 a {
   color: #fff;
   text-decoration: none;
+  -webkit-user-select: none !important; 
 }
 .me {
   height: 100%;
