--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,8 @@ body {
   font-family: 'Raleway', sans-serif;
   height: 100%;
   min-height: 100%;
-  webkit-touch-callout: none !important; }
+  -webkit-touch-callout: none !important;
+  -webkit-user-select: none !important; 
 }
 a {
   color: #fff;
