--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
-  background: #000000;
-  color: #fff;
+  background: black;
+  color: white;
   font-family: 'Raleway', sans-serif;
   height: 100%;
   min-height: 100%;
@@ -8,7 +8,7 @@ body {
   -webkit-user-select: none !important; 
 }
 a {
-  color: #fff;
+  color: white;
   text-decoration: none;
   -webkit-user-select: none !important; 
 }
@@ -26,17 +26,11 @@ a {
   width: 45%;
   height: 45%;
 }
-.me h1 {
-  text-transform: uppercase;
-  letter-spacing: 3px;
-  text-align: center;
-}
+
 .me p {
   font-weight: 200;
 }
-.me span {
-  font-weight: bold;
-}
+
 .social {
   position: fixed;
   top: 20px;
@@ -74,7 +68,7 @@ a {
   background: rgba(255, 255, 255, 0.4);
 }
 .social ul li:hover a {
-  color: #000;
+  color: black;
 }
 .social ul li:hover i {
   color: #fff;
@@ -92,8 +86,8 @@ a {
 }
 .social ul li i {
   margin-left: 10px;
-  color: #000;
-  background: #fff;
+  color: black;
+  background: white;
   padding: 10px;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
@@ -101,7 +95,6 @@ a {
   width: 20px;
   height: 20px;
   font-size: 20px;
-  background: #ffffff;
   -webkit-transform: rotate(0deg);
   -moz-transform: rotate(0deg);
   -ms-transform: rotate(0deg);
